--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "concurrently \"nodemon\" \"npm start -prefix front-end\""
   },
   "dependencies": {
     "@types/node": "^14.14.31",
     "alertifyjs": "^1.13.1",
     "axios": "^0.21.1",
+    "concurrently": "^6.0.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
